erDiagram
    PROFILES {
        UUID id PK
        TEXT email
        USER_ROLE role
        BOOLEAN is_verified_seller
        JSONB lifestyle_preferences
    }

    SUBSCRIPTIONS {
        UUID id PK
        UUID user_id FK
        SUBSCRIPTION_PLAN plan
        TEXT status
        INTEGER ai_descriptions_used
    }

    AGENCIES {
        UUID id PK
        UUID owner_id FK
        TEXT name
        TEXT slug
        BOOLEAN verified
    }

    PROJECTS {
        UUID id PK
        UUID agency_id FK
        TEXT title
        PROJECT_STATUS status
    }

    NEIGHBORHOODS {
        UUID id PK
        TEXT name
        TEXT city
        TEXT slug
    }

    LISTINGS {
        UUID id PK
        UUID owner_id FK
        UUID agency_id FK
        UUID project_id FK
        UUID neighborhood_id FK
        LISTING_CATEGORY category
        PROPERTY_TYPE property_type
        LISTING_STATUS status
        NUMERIC price
        VECTOR embedding
    }

    HOUSEMATES {
        UUID id PK
        UUID listing_id FK
        UUID user_id FK
        TEXT name
    }

    LISTING_APPLICATIONS {
        UUID id PK
        UUID listing_id FK
        UUID applicant_id FK
        INTEGER compatibility_score
        APPLICATION_STATUS status
    }

    FAVORITES {
        UUID user_id PK
        UUID listing_id PK
        TIMESTAMPTZ created_at
    }

    LEADS {
        UUID id PK
        UUID user_id FK
        UUID listing_id FK
        UUID agency_id FK
        TEXT source
    }

    VIEWINGS {
        UUID id PK
        UUID listing_id FK
        UUID requester_id FK
        UUID owner_id FK
        VIEWING_STATUS status
    }

    BOOKINGS {
        UUID id PK
        UUID listing_id FK
        UUID renter_id FK
        UUID owner_id FK
        TEXT booking_type
        TEXT status
    }

    PAYMENTS {
        UUID id PK
        UUID user_id FK
        UUID listing_id FK
        UUID booking_id FK
        TEXT kind
        TEXT status
    }

    BOOKING_DISBURSEMENTS {
        UUID id PK
        UUID booking_id FK
        INTEGER month_number
        NUMERIC amount
        TEXT status
    }

    NOTIFICATIONS {
        UUID id PK
        UUID user_id FK
        TEXT type
        BOOLEAN is_read
    }

    KNOWLEDGE_CHUNKS {
        UUID id PK
        TEXT source_type
        TEXT source_id
        VECTOR embedding
    }

    PROFILES ||--|| SUBSCRIPTIONS : has
    PROFILES ||--o{ AGENCIES : owns
    AGENCIES ||--o{ PROJECTS : develops
    PROFILES ||--o{ LISTINGS : owns
    AGENCIES ||--o{ LISTINGS : markets
    PROJECTS ||--o{ LISTINGS : contains
    NEIGHBORHOODS ||--o{ LISTINGS : locates

    LISTINGS ||--o{ HOUSEMATES : has
    PROFILES ||--o{ HOUSEMATES : profile_link
    LISTINGS ||--o{ LISTING_APPLICATIONS : receives
    PROFILES ||--o{ LISTING_APPLICATIONS : applies
    PROFILES ||--o{ FAVORITES : saves
    LISTINGS ||--o{ FAVORITES : saved_as

    PROFILES ||--o{ LEADS : creates
    LISTINGS ||--o{ LEADS : generates
    AGENCIES ||--o{ LEADS : receives
    LISTINGS ||--o{ VIEWINGS : schedules
    PROFILES ||--o{ VIEWINGS : requests
    PROFILES ||--o{ VIEWINGS : owns_slot

    LISTINGS ||--o{ BOOKINGS : booked_by
    PROFILES ||--o{ BOOKINGS : rents
    PROFILES ||--o{ BOOKINGS : owns_booking
    BOOKINGS ||--o{ PAYMENTS : paid_by
    BOOKINGS ||--o{ BOOKING_DISBURSEMENTS : schedules
    PROFILES ||--o{ PAYMENTS : pays
    LISTINGS ||--o{ PAYMENTS : charged_for
    PROFILES ||--o{ NOTIFICATIONS : receives
